# gemma-sam-mlx

./: .gitignore  LICENSE  README.md  pyproject.toml  start.sh
GemmaSAMApp/: project.yml
GemmaSAMApp/GemmaSAMApp/: APIClient.swift  AppState.swift  ContentView.swift  GemmaSAMApp.entitlements  GemmaSAMApp.swift  Info.plist  VideoPlayerView.swift
GemmaSAMApp/GemmaSAMApp.xcodeproj/: project.pbxproj
backend/: main.py  models.py
